--- a/assignments/css/Frameworks/ POS system Using Bootstrap/assets/css/Style.css
+++ b/assignments/css/Frameworks/ POS system Using Bootstrap/assets/css/Style.css
@@ -23,3 +23,18 @@
     color: #ef5350;
     font-size: 30px;
 }
+
+.dash-2col{
+    height: 150px;
+    align-items: center;
+    margin-top: 10px;
+    background: #ffffff;
+}
+
+.dash-col{
+    height: 200px;
+}
+
+.table-style{
+    background: #ffffff;
+}
