--- a/assignments/js/Game/2D Game/src/lvl01_Styles.css
+++ b/assignments/js/Game/2D Game/src/lvl01_Styles.css
@@ -2,6 +2,20 @@
     margin: 0;
 }
 
+#cursor{
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    background-image: url("assets/Level 1/crosshair/crosshair068.png");
+    background-size: cover;
+    background-position: center;
+    width: 50px;
+    height: 50px;
+    transform: translate(-50%,-50%);
+    pointer-events: none;
+    box-sizing: border-box;
+}
+
 .background{
     position: relative;
     width: 100vw;
@@ -9,6 +23,7 @@
     background-image: url("assets/Level 1/Hills Free (update 3.0).png");
     background-size: cover;
     background-position: center;
+    z-index: 1;
 }
 .soil{
     position: absolute;
@@ -18,6 +33,7 @@
     background-image: url("assets/Level 1/soil-575643.png");
     background-size: cover;
     background-position: center;
+    z-index: 3;
 }
 .bush1{
     position: absolute;
@@ -28,6 +44,7 @@
     background-image: url("assets/Level 1/bush-g0110af25f_1280.png");
     background-size: cover;
     background-position: center;
+    z-index: 3;
 }
 .bush2{
     position: absolute;
@@ -38,6 +55,7 @@
     background-image: url("assets/Level 1/bush-ga35d1e709_1280.png");
     background-size: cover;
     background-position: center;
+    z-index: 3;
 }
 .bush3{
     position: absolute;
@@ -48,4 +66,5 @@
     background-image: url("assets/Level 1/bush-g0110af25f_1280.png");
     background-size: cover;
     background-position: center;
+    z-index: 3;
 }
