--- a/assignments/js/Game/2D Game/src/Levels/css/lvl01_Styles.css
+++ b/assignments/js/Game/2D Game/src/Levels/css/lvl01_Styles.css
@@ -4,7 +4,17 @@
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-    cursor: none;
+}
+
+#hunter{
+    width: 25%;
+    height: 25%;
+    overflow: hidden;
+    position: absolute;
+    background-image: url("../../assets/Level 1/SVG/hunter.svg");
+    background-size: cover;
+    background-position: center;
+    bottom: 5%;
 }
 
 #cursor{
@@ -22,21 +32,25 @@
 }
 #enemyContainer{
     position: absolute;
-    width: 100vw;
-    height: 25%;
+    width: 70vw;
+    height: 30%;
     bottom: 15%;
+    left: 20%;
+    border: 2px solid black;
 }
 
 #enemyContainer>div:nth-child(1){
     position: relative;
     width: 100%;
     height: 100%;
+    border: 2px solid red;
 }
 
 #enemy{
     position: absolute;
     height: 100%;
     width: 200px;
+    border: 2px solid yellow;
 }
 
 .background{
@@ -44,7 +58,7 @@
     height: 100%;
     overflow: hidden;
     position: absolute;
-    background-image: url("../../assets/Level 1/Hills Free (update 3.0).png");
+    background-image: url("../../assets/Level 1/SVG/background.svg");
     background-size: cover;
     background-position: center;
 }
@@ -96,43 +110,13 @@
     opacity: 10;
     color: rgba(0, 0, 0, 0.88);
 }
-
-.soil{
-    position: absolute;
-    width: 100vw;
-    height: 15%;
-    bottom: 0;
-    background-image: url("../../assets/Level 1/soil-575643.png");
-    background-size: cover;
-    background-position: center;
-}
 .bush1{
+    overflow: hidden;
     position: absolute;
-    width: 40%;
-    height: 40%;
-    bottom: 10px;
-    right: 0;
-    background-image: url("../../assets/Level 1/bush-g0110af25f_1280.png");
-    background-size: cover;
-    background-position: center;
-}
-.bush2{
-    position: absolute;
-    width: 40%;
-    height: 40%;
-    bottom: 10px;
-    right: 30%;
-    background-image: url("../../assets/Level 1/bush-ga35d1e709_1280.png");
-    background-size: cover;
-    background-position: center;
-}
-.bush3{
-    position: absolute;
-    width: 40%;
-    height: 40%;
-    bottom: 0;
-    left: 0;
-    background-image: url("../../assets/Level 1/bush-g0110af25f_1280.png");
+    width: 100%;
+    height: 39%;
+    bottom:0;
+    background-image: url("../../assets/Level 1/SVG/bush C.svg");
     background-size: cover;
     background-position: center;
 }
