--- a/assignments/js/Game/2D Game/src/assets/css/lvl01_Styles.css
+++ b/assignments/js/Game/2D Game/src/assets/css/lvl01_Styles.css
@@ -12,7 +12,7 @@
     height: 25%;
     overflow: hidden;
     position: absolute;
-    background-image: url("../../assets/Level 1/SVG/hunter.svg");
+    background-image: url("../Level 1/SVG/hunter.svg");
     background-size: cover;
     background-position: center;
     bottom: 5%;
@@ -22,7 +22,7 @@
     top: 50%;
     left: 50%;
     position: absolute;
-    background-image: url("../../assets/Level 1/crosshair/crosshair068.png");
+    background-image: url("../Level 1/crosshair/crosshair068.png");
     background-size: cover;
     background-position: center;
     width: 50px;
@@ -55,7 +55,7 @@
     height: 100%;
     overflow: hidden;
     position: absolute;
-    background-image: url("../../assets/Level 1/SVG/background.svg");
+    background-image: url("../Level 1/SVG/background.svg");
     background-size: cover;
     background-position: center;
 }
@@ -113,7 +113,7 @@
     width: 100%;
     height: 39%;
     bottom:0;
-    background-image: url("../../assets/Level 1/SVG/bush C.svg");
+    background-image: url("../Level 1/SVG/bush C.svg");
     background-size: cover;
     background-position: center;
 }
