game sounds & game over effect

--- a/assignments/js/Game/2D Game/src/assets/css/lvl01_Styles.css
+++ b/assignments/js/Game/2D Game/src/assets/css/lvl01_Styles.css
@@ -6,6 +6,11 @@
     height: 100vh;
     cursor: none;
 }
+#gameOver{
+    position: absolute;
+    top: 25%;
+    left: 20%;
+}
 
 #hunter{
     width: 25%;
