health bar & function added

--- a/assignments/js/Game/2D Game/src/assets/css/indexCSS.css
+++ b/assignments/js/Game/2D Game/src/assets/css/indexCSS.css
@@ -11,7 +11,7 @@
     top: 50%;
     left: 50%;
     position: absolute;
-    background-image: url("../Level 1/crosshair/crosshair068.png");
+    background-image: url("../index/crosshair/crosshair068.png");
     background-size: cover;
     background-position: center;
     width: 50px;
