--- a/assignments/js/Game/2D Game/src/assets/css/lvl02_Style.css
+++ b/assignments/js/Game/2D Game/src/assets/css/lvl02_Style.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     width: 100vw;
     height: 100vh;
+    cursor: none;
 }
 
 .lvl02_Background{
@@ -24,7 +25,7 @@
 
 #lvl02_hunter{
     width: 25%;
-    height: 25%;
+    height: 29%;
     overflow: hidden;
     position: absolute;
     background-image: url("../../assets/Level 2/level 2 character.svg");
@@ -49,9 +50,9 @@
 
 .lvl02_enemyContainer{
     position: absolute;
-    width: 70vw;
+    width: 79vw;
     height: 30%;
-    bottom: 18%;
+    bottom: 5%;
     left: 20%;
 }
 
