--- a/assignments/js/Game/2D Game/src/assets/css/lvl02_Style.css
+++ b/assignments/js/Game/2D Game/src/assets/css/lvl02_Style.css
@@ -139,3 +139,11 @@
     height: 9vh;
 }
 
+#LEVEL02{
+    position: absolute;
+    left: 1%;
+    top: 1%;
+    height: 50px;
+    width: 100px;
+}
+
